--- a/resources/controllerConfig.properties
+++ b/resources/controllerConfig.properties
@@ -1,32 +1,27 @@
-# Common Commands
-MOVEUPLEFT = Q
-MOVEUP = W
-MOVEUPRIGHT = E
-MOVEDOWNLEFT = A
-MOVEDOWN = S
-MOVEDOWNRIGHT = D
-BINDWOUNDSSKILL = 1
-BARGAINSKILL = 2
-OBSERVATIONSKILL = 3
-TOGGLECAMERA = Z
-CAMERARIGHT = L
-CAMERAUP = I
-CAMERALEFT = J
-CAMERADOWN = K
-
-# Summoner Commands
-ENCHANTMENTSKILL = 4
-BOONSKILL = 5
-BANESKILL = 6
-STAFFSKILL = 7
-
-# Smasher Commands
-BRAWLSKILL = 4
-ONEHANDEDWEAPONSKILL = 5
-TWOHANDEDWEAPONSKILL = 6
-
-# Sneak Commands
-PICKPOCKETSKILL = 4
-REMOVETRAPSKILL = 5
-CREEPSKILL = 6
-RANGEDWEAPONSKILL = 7
+#Controller
+#Mon Apr 23 06:53:02 EDT 2018
+MOVEDOWN=S
+BRAWLSKILL=4
+RANGEDWEAPONSKILL=7
+CAMERADOWN=K
+MOVEUP=W
+MOVEUPLEFT=Q
+REMOVETRAPSKILL=5
+OBSERVATIONSKILL=3
+ENCHANTMENTSKILL=4
+BANESKILL=6
+TOGGLECAMERA=Z
+PICKPOCKETSKILL=4
+MOVEDOWNLEFT=A
+ONEHANDEDWEAPONSKILL=5
+CAMERARIGHT=L
+TWOHANDEDWEAPONSKILL=6
+CAMERALEFT=J
+MOVEDOWNRIGHT=D
+CREEPSKILL=6
+MOVEUPRIGHT=E
+BINDWOUNDSSKILL=1
+BOONSKILL=5
+CAMERAUP=I
+STAFFSKILL=7
+BARGAINSKILL=2
